# Copyright 2022 Datafuse Labs
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
description = "OpenDAL's object_store binding"
edition = "2021"
license = "Apache-2.0"
name = "object_store_opendal"
repository = "https://github.com/datafuselabs/opendal"
version = "0.0.1"
# MSRV of OpenDAL. Please update this field while bump.
rust-version = "1.60"

[dependencies]
async-trait = "0.1"
bytes = "1"
chrono = "0.4.23"
futures = "0.3"
object_store = "0.5"
opendal = { version = "0.28", path = "../../" }
tokio = "1"

[dev-dependencies]
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
