(lang dune 2.0)
(name opendal)
(generate_opam_files true)
(license Apache-2.0)
(maintainers "OpenDAL Contributors <dev@opendal.apache.org>")
(authors "OpenDAL Contributors <dev@opendal.apache.org>")
(source (github apache/incubator-opendal))
(documentation "https://opendal.apache.org/")
(package
 (name opendal)
 (synopsis "Open Data Access Layer: Access data freely")
 (description
  "OpenDAL is a data access layer that allows users to easily and efficiently retrieve data from various storage services in a unified way.")
 (depends
  (ounit2 (and (>= 2.2.6) :with-test))
  (ocaml (>= "4.03.0"))
  (dune (>= "1.5"))
  conf-rust))
